; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonformatsimage_texture.c_image_texture_free.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonformatsimage_texture.c_image_texture_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.texture_image = type { i32*, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @image_texture_free(%struct.texture_image* %0) #0 {
  %2 = alloca %struct.texture_image*, align 8
  store %struct.texture_image* %0, %struct.texture_image** %2, align 8
  %3 = load %struct.texture_image*, %struct.texture_image** %2, align 8
  %4 = icmp ne %struct.texture_image* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %23

6:                                                ; preds = %1
  %7 = load %struct.texture_image*, %struct.texture_image** %2, align 8
  %8 = getelementptr inbounds %struct.texture_image, %struct.texture_image* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %6
  %12 = load %struct.texture_image*, %struct.texture_image** %2, align 8
  %13 = getelementptr inbounds %struct.texture_image, %struct.texture_image* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @free(i32* %14)
  br label %16

16:                                               ; preds = %11, %6
  %17 = load %struct.texture_image*, %struct.texture_image** %2, align 8
  %18 = getelementptr inbounds %struct.texture_image, %struct.texture_image* %17, i32 0, i32 2
  store i64 0, i64* %18, align 8
  %19 = load %struct.texture_image*, %struct.texture_image** %2, align 8
  %20 = getelementptr inbounds %struct.texture_image, %struct.texture_image* %19, i32 0, i32 1
  store i64 0, i64* %20, align 8
  %21 = load %struct.texture_image*, %struct.texture_image** %2, align 8
  %22 = getelementptr inbounds %struct.texture_image, %struct.texture_image* %21, i32 0, i32 0
  store i32* null, i32** %22, align 8
  br label %23

23:                                               ; preds = %16, %5
  ret void
}

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
